--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Subhash Mudaliar
 logo: /assets/img/headshot_circle.png
-description: text below image
+description: Design Analyze Predict
 #show_downloads: true
 theme: jekyll-theme-minimal
